--- a/Git/GitOne.html
+++ b/Git/GitOne.html
@@ -183,7 +183,7 @@ hljs.initHighlightingOnLoad();
 
 <h3>Alan T. Arnholt</h3>
 
-<p>Last compiled Friday, March 14, 2014 - 09:24:13.</p>
+<p>Last compiled Friday, March 14, 2014 - 09:35:44.</p>
 
 <p>What is version control and why should you use it?  Version control is a way to track files over time.  By using version control you will be able to retrace your steps to
 a previous working (read un-hosed) version of your files.  You may be using a form of version control now with files named like the following:</p>
@@ -219,11 +219,13 @@ local machines and two servers.  That works fine until you start using the files
 <h2>Windows users</h2>
 
 <p>Once the download is complete, right click on the downloaded file to install it as an 
-administrator.  Use the default options at each step of the installation if you are unsure 
-what you are doing.  When the installation arrives at the screen adjusting your PATH 
-environment, click in the circle to the left of <strong>Run Git from the Windows Command Prompt</strong>.
+administrator.  Use the default options at each step of the installation if you are 
+unsure what you are doing.  When the installation arrives at the screen adjusting your 
+PATH environment, click in the circle to the left of 
+<strong>Run Git from the Windows Command Prompt</strong>.
 You may need to manually add the path to where the <code>bash.exe</code> resides.  Run the 
-following at the <code>R</code> prompt to make sure <code>R</code> knows where to find <code>bash</code>.</p>
+following at the <code>R</code> prompt to make sure <code>R</code> knows where to find <code>bash</code>.  Note that the 
+path below will be dependent on the operating system you are using.</p>
 
 <pre><code class="r">Sys.which(&quot;bash&quot;)
 </code></pre>
@@ -233,6 +235,8 @@ following at the <code>R</code> prompt to make sure <code>R</code> knows where t
 </code></pre>
 
 <p>If the output does not specify the path to <code>bash</code>, the path to <code>bash</code> is not properly configured.</p>
+
+<p>To interact with Git, find the program named Git Bash.  Git Bash is the command line environment windows uses to interact with Git.  Git Bash should be located in the Git directory within your Start Menu if you followed the default installation instructions.</p>
 
 <h2>Initial Setup</h2>
 
@@ -336,12 +340,12 @@ Changes not staged for commit:
   (use &quot;git add/rm &lt;file&gt;...&quot; to update what will be committed)
   (use &quot;git checkout -- &lt;file&gt;...&quot; to discard changes in working directory)
 
+    modified:   GitOne.Rmd
     modified:   GitOne.html
     modified:   GitOne.md
     deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.RData
     deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdb
     deleted:    cache/BashCheck_3a4552886a749e14bd443de33a754ec2.rdx
-    modified:   images/MacGitDownload.png
 
 no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&quot;)
 </code></pre>
@@ -356,9 +360,8 @@ taken of the commit with the message &ldquo;staging all files.&rdquo;</p>
 git commit  -m &quot;staging all files&quot;
 </code></pre>
 
-<pre><code>[master ece28bf] staging all files
- 3 files changed, 53 insertions(+), 39 deletions(-)
- rewrite Git/images/MacGitDownload.png (98%)
+<pre><code>[master 0c0ff3b] staging all files
+ 3 files changed, 50 insertions(+), 56 deletions(-)
 </code></pre>
 
 <p>Check the status after the last commit.</p>
@@ -410,7 +413,13 @@ no changes added to commit (use &quot;git add&quot; and/or &quot;git commit -a&q
 <pre><code class="bash">git log  -3
 </code></pre>
 
-<pre><code>commit ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5
+<pre><code>commit 0c0ff3b0b5d0610054686c17768ac5ebc10cd670
+Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
+Date:   Fri Mar 14 09:35:44 2014 -0400
+
+    staging all files
+
+commit ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5
 Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 09:24:13 2014 -0400
 
@@ -421,12 +430,6 @@ Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
 Date:   Fri Mar 14 09:21:49 2014 -0400
 
     staging all files
-
-commit 0b9e780f2297647a42fa78a0c85a19433f6ccfcc
-Author: Alan Arnholt &lt;arnholtat@appstate.edu&gt;
-Date:   Fri Mar 14 09:04:02 2014 -0400
-
-    staging all files
 </code></pre>
 
 <p>That was ugly. Let us try some formatting.</p>
@@ -434,9 +437,9 @@ Date:   Fri Mar 14 09:04:02 2014 -0400
 <pre><code class="bash">git log --pretty=oneline -3
 </code></pre>
 
-<pre><code>ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5 staging all files
+<pre><code>0c0ff3b0b5d0610054686c17768ac5ebc10cd670 staging all files
+ece28bfd664d5ca747c0ec8cdc0bc84b1ac57cd5 staging all files
 791092754327cab7fdc29b388701fafca434fbc2 staging all files
-0b9e780f2297647a42fa78a0c85a19433f6ccfcc staging all files
 </code></pre>
 
 <p>The previous output was to brief to suit me.  Let us try some further formatting.</p>
@@ -444,9 +447,9 @@ Date:   Fri Mar 14 09:04:02 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3
 </code></pre>
 
-<pre><code>ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>0c0ff3b Fri Mar 14 09:35:44 2014 -0400- staging all files [Alan Arnholt]
+ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
 7910927 Fri Mar 14 09:21:49 2014 -0400- staging all files [Alan Arnholt]
-0b9e780 Fri Mar 14 09:04:02 2014 -0400- staging all files [Alan Arnholt]
 </code></pre>
 
 <p>Maybe even some statistics?</p>
@@ -454,7 +457,13 @@ Date:   Fri Mar 14 09:04:02 2014 -0400
 <pre><code class="bash">git log --pretty=format:&quot;%h %ad- %s [%an]&quot; -3 --stat
 </code></pre>
 
-<pre><code>ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
+<pre><code>0c0ff3b Fri Mar 14 09:35:44 2014 -0400- staging all files [Alan Arnholt]
+ Git/GitOne.Rmd  | 12 ++++++++----
+ Git/GitOne.html | 51 +++++++++++++++++++++++----------------------------
+ Git/GitOne.md   | 43 +++++++++++++++++++------------------------
+ 3 files changed, 50 insertions(+), 56 deletions(-)
+
+ece28bf Fri Mar 14 09:24:13 2014 -0400- staging all files [Alan Arnholt]
  Git/GitOne.html               |  49 ++++++++++++++++++++++++------------------
  Git/GitOne.md                 |  43 ++++++++++++++++++++----------------
  Git/images/MacGitDownload.png | Bin 38827 -&gt; 42135 bytes
@@ -466,12 +475,6 @@ Date:   Fri Mar 14 09:04:02 2014 -0400
  Git/GitOne.md               |  36 +++++++++++++++++++-----------------
  Git/images/SGitDownload.png | Bin 0 -&gt; 463619 bytes
  4 files changed, 43 insertions(+), 37 deletions(-)
-
-0b9e780 Fri Mar 14 09:04:02 2014 -0400- staging all files [Alan Arnholt]
- Git/GitOne.Rmd  |  4 ++--
- Git/GitOne.html | 45 ++++++++++++++++++++++++++-------------------
- Git/GitOne.md   | 37 ++++++++++++++++++++++---------------
- 3 files changed, 50 insertions(+), 36 deletions(-)
 </code></pre>
 
 <p>Now, just to show how cool this is, we will mix in a little <code>R</code>.</p>
